@@ -37,29 +37,37 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/peer_id.hpp" // for sha1_hash
 #include "libtorrent/config.hpp" // for sha1_hash
 
+#include <math.h> // for log()
+
 namespace libtorrent
 {
-	TORRENT_EXPORT void set_bit(boost::uint32_t b, boost::uint8_t* bits, int len);
-	TORRENT_EXPORT bool has_bit(boost::uint32_t b, boost::uint8_t const* bits, int len);
+	TORRENT_EXPORT void set_bits(boost::uint8_t const* b, boost::uint8_t* bits, int len);
+	TORRENT_EXPORT bool has_bits(boost::uint8_t const* b, boost::uint8_t const* bits, int len);
+	TORRENT_EXPORT int count_zero_bits(boost::uint8_t const* bits, int len);
 
 	template <int N>
 	struct bloom_filter
 	{
 		bool find(sha1_hash const& k) const
-		{
-			return has_bit(k[0], bits, N)
-				&& has_bit(k[1], bits, N)
-				&& has_bit(k[2], bits, N);
-		}
+		{ return has_bits(&k[0], bits, N); }
 
 		void set(sha1_hash const& k)
-		{
-			set_bit(k[0], bits, N);
-			set_bit(k[1], bits, N);
-			set_bit(k[2], bits, N);
-		}
+		{ set_bits(&k[0], bits, N); }
+
+		std::string to_string() const
+		{ return std::string((char const*)&bits[0], N); }
+
+		void from_string(char const* str)
+		{ memcpy(bits, str, N); }
 
 		void clear() { memset(bits, 0, N); }
+
+		float size() const
+		{
+			const int c = (std::min)(count_zero_bits(bits, N), (N * 8) - 1);
+			const int m = N * 8;
+			return log(c / float(m)) / (2.f * log(1.f - 1.f/m));
+		}
 
 		bloom_filter() { clear(); }
 
